create blogs page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.color-text , .swal2-title {
+  @apply bg-gradient-to-r from-sky-700 via-sky-300 to-green-400 text-transparent bg-clip-text animate-gradient;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.gradient-sergest {
+  @apply bg-gradient-to-r from-[#00CDDF] to-[#033E85];
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.footer-link li a {
+  @apply hover:font-bold transition-all text-sm md:text-[16px];
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.click {
+  @apply active:scale-95 transition-all active:shadow-lg;
 }
+ 
