--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
  
-
+html {
+  overflow-x: hidden
+}
 
 .color-text , .swal2-title {
   @apply bg-gradient-to-r from-sky-700 via-sky-300 to-green-400 text-transparent bg-clip-text animate-gradient;
